--- a/product/package.json
+++ b/product/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "co": "^4.6.0"
+    "co": "^4.6.0",
+    "request-promise": "^3.0.0"
   },
   "devDependencies": {},
   "scripts": {
